./POT/R/util-GPD-mle.R : 117           return
./POT/R/util-GPD-mle.R : 126             return
./POT/R/util-GPD-mle.R : 134               return
./POT/R/util-GPD-mple.R : 120           return
./POT/R/util-GPD-mple.R : 130             return
./POT/R/uvpot-fitPP.R : 107           return
./POT/R/uvpot-fitPP.R : 117             return
(thanks to Duncan Murdoch)
  - Update/simplify man pages.
 
Version 1.1-5:
  - Rename files in R/ directory.
  - Add a GPL banner on R/C files.

Version 1.1-4:
  - Update for future CRAN release by Christophe Dutang.
  - Fix issues with S3 class and add defensive programming.

Version 1.1-3:
  - Fix a problem detected by AddressSanitizer (thanks to Brian Ripley): 
see https://r-forge.r-project.org/scm/viewvc.php/pkg/src/ts2tsd.c?root=pot&r1=354&r2=493

Version 1.0-7:
  - Update my address e.g. move to EPFL.
  - Add the point process fitting procedure.

Version 1.0-6:
  - Improve the package homepage.
  - Fix a bug in the pickdep function.

Version 1.0-5:
  - Add a ``convassess'' function to assess for convergence of the
    fitted uvpot and bvpot objects.
  - Some minor changes for uvpot fitting process to increase
    robustness.
  - Density plot can return histogram in addition.
  - Add a confint function to provide a generic access for (profile)
    confidence interval computing.

Version 1.0-4:
  - Fix encodings with newer R version.
  - Link to the url at R-Forge in the Description file.
  - Add lots of new estimators for the univariate GPD.
  - Fix typo and update R vignette.
  - Convert R object to double before calling C code as it may fail.

Version 1.0-3:
  - Fix a huge gap within the diplot function. Thanks to Kallen,
    Maarten-Jan.

Version 1.0-2:
  - Add non conditional modeling.
  - Add tsdep.plot function.
  - Fix a bug in gpd.firl function.
  - Improve several functions.

Version 1.0-1:
  - Add tools to assess for asymptotic (in)dependence.

Version 1.0-0:
  - The fitting codes for Markov chain model is considered stable.