@@ -11,6 +11,7 @@ Version 1.1-6:
 ./POT/R/uvpot-fitPP.R : 117             return
 (thanks to Duncan Murdoch)
   - Update/simplify man pages.
+  - Add a coef function for "pot" objects.
  
 Version 1.1-5:
   - Rename files in R/ directory.
